fix text wrapping issue

--- a/web/renderer/components/StatusWithOptions/index.module.css
+++ b/web/renderer/components/StatusWithOptions/index.module.css
@@ -1,5 +1,5 @@
 .uncommitted {
-  @apply hidden lg:flex items-center sticky right-6 mt-2 z-10 min-w-[20rem];
+  @apply hidden lg:flex items-center whitespace-nowrap sticky right-6 mt-2 z-10 min-w-[20rem];
 
   a {
     @apply mr-3 text-sm;
@@ -36,7 +36,7 @@
 }
 
 .checkboxLabel {
-  @apply mr-2 whitespace-nowrap text-link-1 font-semibold;
+  @apply mr-2 text-link-1 font-semibold;
 }
 
 .checkbox {
